src/test/deca/context/valid/created/cast_by_return.deca
//Description :
// Test d'appel d'attribut
//
// Resultats :
// Erreur


class Premiere {
    protected int test;

    float getTest(){
     return this.test;
    }
}

{

}
