src/test/deca/context/invalid/created/no_object_call.deca
//Description :
// Test d'appel sans objet
//
// Resultats :
// Erreur


class Premiere {
    int x = 2;
    boolean x = true;

    int getX(){
    return this.x;
    }
}

{
Premiere prem = new Premiere();
int a = getX();
}
